tests/spec/fail/func_typed_return_mismatch.aja
fuc maker() -> func(int) -> int:
    return fuc(s: str) -> str: s

f = maker()
print("never")
